<resources>
    <string name="app_name">TENdr</string>
    <string name="LOGIN">LOGIN</string>
    <string name="WELCOME">WELCOME TO TENdr - Sign Up Below</string>
    <string name="EmailHint">Email</string>
    <string name="PasswordHint">Password</string>
    <string name="AgeHint">Age</string>
    <string name="firstname">Firstname</string>
    <string name="Occupation">Occupation</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="SIGNUP">SIGN UP</string>
    <string name="ALREADYUSER">Already have an account?</string>
    <string name="Bio">Bio</string>
    <string name="Gender">Gender</string>
    <string name="Save">Save</string>
    <string name="matchname">matchname</string>
    <string name="send_your_match_a_message">Send a message</string>
    <string name="send">Send</string>
    <string name="nametext">nametext</string>
    <string name="messagetext">messagetext</string>
    <string name="ProfilePreference">Show me</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="location">Location</string>
    <string name="country_of_residence">Country of Residence</string>
    <string name="city_of_residence">City Of Residence</string>
    <string name="what_s_your_occupation">What\'s your Occupation?</string>
    <string name="apply">APPLY</string>
    <string name="timestamp">timeStamp</string>
    <string name="sign_out">Sign Out</string>
    <string-array name="Sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="swipe">Swipe</string>
    <string name="chat">Chat</string>
    <string name="sample_text">WE FLY</string>
    <string name="profile_pic_description">Profile Picture</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="out_of_singles">"We're sadly out of singles in your area :("</string>
    <string name="empty_string"> </string>
    <string name="too_many_matches">You have reached the limit on the amount of matches you\'re allowed.
    \nPlease remove a match to get a new match.</string>
</resources>
