<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <include
        android:id="@+id/activity_auth_toolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/ScrollViewSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_auth_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ProfilePreference"
                android:textStyle="bold"
                android:textSize="25sp"
                />

            <CheckedTextView
                android:id="@+id/ShowMeFemale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/female"
                android:checked="false"
                android:layout_gravity="center"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:textSize="20sp"/>
            <CheckedTextView
                android:id="@+id/ShowMeMale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/male"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:textSize="20sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/location"
                android:textStyle="bold"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/LocationCountryOfResidence"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/country_of_residence"
                android:inputType="text"
                 />



            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/City"
                android:textStyle="bold"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/CityCityOfResidence"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/city_of_residence"
                android:inputType="text"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Occupation"
                android:textStyle="bold"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/OccupationOccupation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/what_s_your_occupation"
                android:inputType="text"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/applyButtonSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorButtons"
                android:textColor="@color/colorButtonsText"
                android:text="@string/apply"

                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>